@@ -196,6 +196,7 @@ changes to languages because of Bugzilla reports.
 * Removed DatabaseMysqlBase::getLagFromProcesslist(). (deprecated since 1.19)
 * Removed LoadBalancer::closeConnecton(). (deprecated since 1.18)
 * Removed ApiBase::createContext(). (deprecated since 1.19)
+* Removed MWNamespace::isMain(). (deprecated since 1.19)
 
 ==== Renamed classes ====
 * CLDRPluralRuleConverter_Expression to CLDRPluralRuleConverterExpression
